--- a/src/index.css
+++ b/src/index.css
@@ -9,11 +9,14 @@
   
   ::-webkit-scrollbar-track {
     background-color:#838383; 
+    height: fit-content;
+    background-color: transparent;
   }
   
   ::-webkit-scrollbar-thumb {
     background-color: #888; 
     border-radius: 6px; 
+    
   }
   
   ::-webkit-scrollbar-thumb:hover {
